test/users/vass/compilerAssert/compilerAssert20.good
compilerAssert20.chpl:2: error: assert failed - m1m2
