test/users/vass/compilerAssert/compilerAssert20.chpl

compilerAssert(false, "m1", "m2", 0);
